Fixed styling on mobile blog and blog concat pages.

--- a/public/global.css
+++ b/public/global.css
@@ -243,6 +243,19 @@ h3.section {
     padding: 0.5rem;
   }
 
+  .blogger-content, .blog-concat {
+    padding: 0 0.5rem;
+  }
+
+  .blogger-content a, .blog-concat a {
+    margin: 0 0 1rem 0 !important;
+    padding: 0 !important;
+  }
+
+  .blogger-content img, .blog-concat img {
+    width: 100%;
+  }
+
   .content .blogger-content-component {
     margin: 0;
     padding: 0.5rem;
